# WinSock

./: .clang-format  CMakeLists.txt
ClientExample/: CMakeLists.txt  main.cpp
Dependencies/: CMakeLists.txt
ServerExample/: CMakeLists.txt  main.cpp
Source/: CMakeLists.txt
Source/Common/: CMakeLists.txt  message.cpp  message.h  socket.cpp  socket.h  socketaddress.cpp  socketaddress.h  wsadata.cpp  wsadata.h
Source/Tcp/: CMakeLists.txt  server.cpp  server.h  socket.cpp  socket.h
